# openprofia

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/client/: .gitkeep  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/client/scripts/: prepare-sidecar.sh
apps/client/src/: App.tsx  main.tsx  router.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/binaries/: .gitignore  openprofia-server-aarch64-apple-darwin  openprofia-server-x86_64-apple-darwin
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src/api/: chat.api.ts  client.ts  documents.api.ts  health.api.ts  settings.api.ts  skills.api.ts
apps/client/src/config/: constants.ts
apps/client/src/hooks/: use-chat-stream.ts  use-connection.ts  use-documents.ts  use-health.ts  use-settings.ts  use-sidecar.ts  use-skills.ts
apps/client/src/providers/: connection-provider.tsx
apps/client/src/routes/: chat.tsx  documents.tsx  settings.tsx  skills.tsx
apps/client/src/stores/: chat.store.ts  connection.store.ts  skill.store.ts
apps/client/src/styles/: globals.css
apps/client/src/types/: index.ts
apps/server/: package.json  tsconfig.json
apps/server/src/: app.ts  index.ts
apps/server/src/config/: env.ts
apps/server/src/db/: connection.ts  lance.ts  types.ts
apps/server/src/plugins/: cors.ts  jwt.ts  swagger.ts
docs/: ARCHITECT.md  SKILL-CREATE.md
scripts/: build-sidecar.mjs  check-ollama.sh
(+47 files in other folders)
