[package]
name = "openprofia"
version = "0.1.0"
description = "OpenProfIA - IA para Educação"
authors = ["OpenProfIA"]
edition = "2021"

[lib]
name = "openprofia_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
